	* Added a new plugin, Format, which offers several commands for
	formatting strings on IRC.  Moved several commands from to it
	from the Utilities plugin.
	
	* Improved the functionality of RSS.announce.  Calling it with
	no arguments now lists the currently announced feeds.  Removing
	feeds is done by specifying the --remove option.

	* Added a reconnect command to the Owner plugin.  It won't work
	for people using asyncoreDrivers, but those people should be few
	and far between these days.
	
	* Added aol and rainbow filters to the Filter plugin.
	
	* Added Nickometer plugin, a translation of Infobot's Nickometer.
	
	* Added multiple recipient support for notes.
	
	* Added BadWords.list, to list the bad words currently being
	censored by the bot.
	
	* Changed Misc.help to allow plugins to specify their own help,
	and added help for several of the more confusing plugins.
	
	* Added Dunno.stats, to return the number of dunnos in the
	database.
	
	* Added the Currency plugin, to perform currency conversions.

	* Added conf.supybot.plugins.Karma.allowSelfRating, which
	determines whether users are allowed to adjust the karma of their
	current nick.

	* Added --nolimit option to Misc.last, which causes it to return
	all matches that are in the history.

	* Added conf.supybot.plugins.Herald.defaultHerald, which provides
	a default herald to use for unregistered users.  Herald.default
	was also added as a friendly interface to managing the
	defaultHerald.

	* Added Weather.wunder, which uses wunderground.com to report the
	current weather status.

	* Added an Infobot plugin, to emulate Infobot.

	* Changed supybot.defaultCapabilities to be a space-separated
	list rather than a comma-separated list.  Also added a check to
	make sure -owner was in supybot.defaultCapabilities, and to
	require a command-line option to allow it not to be present.
	
	* Added Sourceforge.fight, which returns the list of specified